src/styles/views/_message-segments.scss
.MessageSegments {
  .MessageSegments__item {
    user-select: text;
    max-width: 100%;

    &.msgText {
      white-space: pre-line;
    }

    &.msgAt {
      display: inline-flex;
      height: 16px;
      align-items: center;
      color: white;
      background-color: var(--primary-color);
      border-radius: 8px;
      padding: 0 8px;
      margin: 0 4px;
      user-select: all;
      cursor: pointer;

      &.atMySelf {
        background-color: var(--secondary-color);
      }
    }

    &.msgImage {
      &.canBrowse {
        cursor: pointer;
      }

      &.likeText {
        vertical-align: text-bottom;
      }
    }
  }
}

